2021-09-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (valid_p): Identify ELF class and use this to set
	address_size of the fake CUs. Also set offset_size and DWARF version.

2021-09-06  Dmitry V. Levin  <ldv@altlinux.org>

	* dwarf_begin_elf.c (valid_p): Remove casts of malloc return values.
	(dwarf_begin_elf): Remove cast of calloc return value.
	* dwarf_getpubnames.c (get_offsets): Remove casts of realloc return
	values.
	* dwarf_getsrclines.c (read_srclines): Remove cast of malloc return
	value.

2021-04-19  Martin Liska  <mliska@suse.cz>

	* dwarf_begin_elf.c (check_section): Use startswith.

2021-05-01  Mark Wielaard  <mark@klomp.org>

	* libdw_form.c (__libdw_form_val_compute_len): Check indirect
	form is not DW_FORM_indirect or DW_FORM_implicit_const.

2021-04-23  Omar Sandoval  <osandov@fb.com>

	* dwarf_child.c (__libdw_find_attr): Handle DW_FORM_indirect.
	* dwarf_getattrs.c (dwarf_getattrs): Handle DW_FORM_indirect.

2021-02-12  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (attr_ok): For DWARF version 4 or higher
	block forms are not expression locations.
	(is_constant_offset): DW_FORM_implicit_const is also a constant.

2020-12-20  Dmitry V. Levin  <ldv@altlinux.org>

	* .gitignore: New file.

2020-12-16  Dmitry V. Levin  <ldv@altlinux.org>

	* libdwP.h (_): Remove.

2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* dwarf.h: Fix spelling typo in comment.
	* dwarf_begin_elf.c (dwarf_begin_elf): Likewise.
	* dwarf_getlocation.c (attr_ok, __libdw_intern_expression): Likewise.
	* dwarf_getsrclines.c (read_srclines): Likewise.
	* libdw.h: Fix spelling typos in comments.
	* libdwP.h: Likewise.

2020-12-09  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (noinst_PROGRAMS): Rename to noinst_DATA.
	(libdw_so_SOURCES): Remove.
	(MOSTLYCLEANFILES): Add libdw.so.

2020-11-30  Dmitry V. Levin  <ldv@altlinux.org>

	* Makefile.am (libdw.so$(EXEEXT)): Drop $(EXEEXT) suffix.

2020-11-01  Érico N. Rolim  <erico.erc@gmail.com>
